--- a/mycss.css
+++ b/mycss.css
@@ -6,6 +6,7 @@ body, html {
 	position: relative;
 	/*bottom: 0;*/
 	width: 100%;
+	background: white;
 }
 .Menu {
 	position: relative;
@@ -14,20 +15,27 @@ body, html {
 	margin: 10px;
 	z-index: 9999;
 }
-
-.start {
-	background-color: green;
+#speedNum {
+	background: white;
+	padding: 5px;
+	border-radius: 5px;
 }
-.end {
-	background-color: blue;
+
+.startEvents {
+	background-color: green;
+	width: 4px;
+}
+.endEvents {
+	background-color: #A00;
+	width: 4px;
 }
 
 video {
 	background: black;
 }
 #video-container {
-	/*margin-top: 10em;*/
-	/*position: absolute;*/
+	position: relative;
+	margin-top: 5px;
 	width: 100%;
 }
 #video{
@@ -39,4 +47,16 @@ video {
 	top: 20px;
 	left: 50%;
 	right: 50%;
+}
+
+
+/* Backgrounds */
+.gradient-pattern {
+	background-color: #6d695c;
+	background-image:
+	repeating-linear-gradient(120deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px),
+	repeating-linear-gradient(60deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px),
+	linear-gradient(60deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1)),
+	linear-gradient(120deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
+	background-size: 70px 120px;
 }
