added login form

--- a/mycss.css
+++ b/mycss.css
@@ -60,3 +60,58 @@ video {
 	linear-gradient(120deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
 	background-size: 70px 120px;
 }
+
+
+/* Login */
+/* Bordered form */
+form {
+    /*border: 3px solid #f1f1f1;*/
+}
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+.logoutbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+    right: 0;
+    float: right;
+    margin: 0px 0;
+}
+
+
+
+/* Add padding to containers */
+.form-container {
+    padding: 16px;
+    background-color: white;
+    margin: 20%;
+}
+
+#unregistered {
+	display: none;
+}
+
+#registered {
+	display: none;
+}
+
