Show live picture of a camera when selecting it

--- a/mycss.css
+++ b/mycss.css
@@ -40,6 +40,10 @@ video {
 	margin-top: 5px;
 	width: 100%;
 }
+#liveview{
+	height: 100%;
+	width: 100%;
+}
 #video{
 	height: 100%;
 	width: 100%;
